# VakyaLang

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GENESIS_RECORD.md  LICENSE  LICENSE_AGPL  NOTICE  README.md  SANSKRIT_COMPUTING_COMPLETE_Full.md  SECURITY.md  VAK_STATUS.md  kaarya_soochi.txt  master_test.py  pyproject.toml  run_all_tests.py  run_edge_tests.py  vak.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
atmalipi/src/: engine.py
docs/: architecture.md  installation.md  language_spec.md  philosophy.md  tutorial.md  vak_syntax.md  vm_design.md
examples/: data.vak  dosh.vak  fibonacci.vak  namaste.vak  tasks.vak  unified_test.vak  varg.vak  vyapak.vak  webgen.vak
runtime/: README.md  benchmark.vak  kaarya_soochi.txt  run.py  run_tests.py
runtime/spec/: GRAMMAR.md
runtime/src/: __init__.py  ast_nodes.py  bytecode.py  compiler.py  environment.py  errors.py  interpreter.py  lexer.py  opcodes.py  parser.py  tokens.py  vm.py
runtime/stdlib/: file.vak  ganit.vak  json.vak  mool.vak  path.vak
sanskrit_coder/: LICENSE  README.md  TEST_RESULTS.md  __init__.py  __main__.py  main.py  requirements.txt  sanskrit_coder.md  universal.py
sanskrit_coder/core/: __init__.py  engine.py  nyaya_logic.py  sanskrit_grammar.py  sanskrit_math_engine.py  translator.py
sanskrit_coder/grammar/: __init__.py  grammar.py
sanskrit_coder/linguistics/: chandas.py  core.py  kosa.py  nirukta.py  vyakarana.py
sanskrit_coder/logic_engine/: __init__.py  logic_engine.py
sanskrit_coder/math_engine/: __init__.py  math_engine.py
sanskrit_coder/numbers/: __init__.py  sanskrit_numbers.py
sanskrit_coder/philosophy/: ganita.py  mimamsa.py  nyaya.py
tests/: __init__.py  test_live_features.py  test_sanskrit_coder.py  test_stdlib.vak  test_stdlib_file.vak  test_system.vak
(+11 files in other folders)
