[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vakyalang"
version = "2.0.0"
authors = [
  { name="Raj Mitra", email="r.8981718053@gmail.com" },
]
description = "A Sanskrit-inspired programming language and symbolic computing ecosystem."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
"Homepage" = "https://github.com/Sansmatic-z/VakyaLang"
"Bug Tracker" = "https://github.com/Sansmatic-z/VakyaLang/issues"

[project.scripts]
vak = "runtime.run:main"
sanskrit-coder = "sanskrit_coder.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "sanskrit_coder*"]
